[package]
name = "async_xdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xsk-rs = { git="https://github.com/ZENOTME/xsk-rs", branch = "umem_hack"}
smallvec = "1.6.1"
anyhow = "1"
itertools = "0.12.1"
core_affinity = "0.8"
log = "0.4.14"
tokio = { version = "1.6", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.6", features = ["sync","macros","rt-multi-thread"] }
env_logger = "0.11"
packet = "0.1.4"
